--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,37 @@
 body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+/*
+*#576F72;
+
+*/
+.container{
+    background-color: #A5C9CA;
+    padding: 10px;
+
+
+}
 
 .weather-app{
     width: 600px;
-    margin:25px auto;
-    padding: 23px;
+    margin:20px auto;
+    padding: 70px;
     border: 1px solid #dadde1;
     border-radius: 7px;
 
 }
 
+.search{
+    background-color: #A5C9CA;
+    padding: 5px;
+    border-radius: 10px;
+    border: 4px #A5C9CA solid;
+    color: white;
+}
+
 h1{
-    color: #878387;
+   color: #878387;
+   /* color: #3F4E4F;*/
     font-size: 38px;
     font-weight: 400;
     line-height: 30px;
@@ -116,3 +135,18 @@ li::first-letter{
     opacity: 0.5;
 
 }
+
+.github-link{
+    font-size: 13px;
+    color: #475252;
+    /*display: block;
+    margin: 0 auto;*/
+   display: flex;
+    justify-content: center;
+
+}
+.github-link a{
+    color: #475252;
+    margin-right: 2px;
+}
+
